--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="./resources/css/stylesheet.css" type="text/css" rel="stylesheet">
     <title>Tea Cozy</title>
   </head>
   <body>
